# calsync

./: README.md  Taskfile.yml  config.yaml  main.py  mypy.ini  pyproject.toml
.github/workflows/: lint.yml
calsync/: common.py
calsync/core/calendar/: __init__.py  base_calendar.py  ics_calendar.py
calsync/core/event/: __init__.py  bucket_events.py  event_types.py  filter_events.py  parse_events.py  parser.py
calsync/core/output/: __init__.py  base_file_writer.py  obsidian_file_writer.py
calsync/util/: cli.py  config.py  logger.py  yml_reader.py
calsync/util/exceptions/: __init__.py  cli_value_error.py  config_value_error.py  environment_value_error.py  path_error.py  request_error.py
