[tool.poetry]
name = "calsync"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
types-pyyaml = "^6.0.12.20250915"
dotenv = "^0.9.9"
pyyaml = "^6.0.2"
ics = "^0.7.2"
requests = "^2.32.5"
arrow = "^1.3.0"
recurring-ical-events = "^3.8.0"
types-icalendar = "^6.3.1.20250914"
types-requests = "^2.32.4.20250913"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
