[project]
name = "wildcat"
version = "0.1.0"
description = "ICS one-way-sync to Obsidian"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arrow>=1.4.0",
    "dotenv>=0.9.9",
    "ics>=0.7.2",
    "pyyaml>=6.0.3",
    "recurring-ical-events>=3.8.0",
    "requests>=2.32.5",
    "types-icalendar>=6.3.1.20250914",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[dependency-groups]
dev = [
    "pyrefly>=0.40.0",
    "ruff>=0.14.3",
]
